feat: add API to delete building by id
